openapi adjustments and apimappings added to cloudformation
